# discvault

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
discvault/: __main__.py  alerts.py  artwork.py  cleanup.py  cli.py  config.py  deps.py  device.py  disc.py  encode.py  extras.py  library.py  pipeline.py  rip.py  tracks.py  verify.py
discvault/metadata/: bandcamp.py  cdtext.py  discogs.py  fileimport.py  gnudb.py  local.py  lookup.py  musicbrainz.py  sanitize.py  search.py  types.py  urlimport.py
discvault/ui/: app.tcss  confirm.py  console.py  extras_select.py  folder_picker.py  import_prompt.py  manual_search.py  output_select.py  selector.py  settings.py  source_select.py  tui.py
docs/: CLI.md  CONFIGURATION.md  INSTALL.md  METADATA.md
scripts/: generate_cli_assets.py
share/bash-completion/completions/: discvault
share/fish/vendor_completions.d/: discvault.fish
share/man/man1/: discvault.1
share/zsh/site-functions/: _discvault
tests/: README.md  test_alerts.py  test_artwork.py  test_bandcamp.py  test_cleanup.py  test_cli.py  test_config.py  test_deps.py  test_device.py  test_disc.py  test_discogs.py  test_encode.py  test_extras.py  test_fileimport.py  test_gnudb.py  test_import_prompt.py  test_lookup.py  test_musicbrainz.py  test_pipeline_resume.py  test_rip.py  test_search.py  test_settings.py  test_tracks.py  test_tui.py  test_urlimport.py
tests/manual/: real_disc_smoke.py
